changed color of image background

--- a/main.css
+++ b/main.css
@@ -3,7 +3,7 @@ body{
     margin: 0;
 }
 figure{
-    background-image: linear-gradient(-20deg, #6e45e2 0%, #88d3ce 100%);
+    background-image: linear-gradient(to top, #e14fad 0%, #f9d423 100%);
     margin: 0;
     display: flex;
 }
